# vinylDisplay

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/vinyl_dashboard/: __init__.py  main.py
src/vinyl_dashboard/api/: audd_client.py  discogs_client.py
src/vinyl_dashboard/audio/: recorder.py
src/vinyl_dashboard/utils/: database_manager.py  discogs_sync.py  state_manager.py
tests/: test_api.py  test_sync.py
