[project]
name = "vinyl-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ed22699", email = "ed22699@bristol.ac.uk" }
]
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "sounddevice>=0.5.5",
]

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.uv.workspace]
members = [
    "test",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
